--- a/javasemantic/package.json
+++ b/javasemantic/package.json
@@ -13,11 +13,12 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
-    "react-markdown": "^6.0.1",
+    "react-markdown": "^7.0.1",
     "react-md-file": "^2.0.0",
     "react-minimal-side-navigation": "^1.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "remark-gfm": "^2.0.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
